force-app/zurich-base/main/default/objects/Case/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Marca para indicar la acción a realizar (ZDA)</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Notificación</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Recotización</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Contactar</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Contratar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>