force-app/zurich-base/main/default/objects/Case/fields/ActivityDescription__c.field-meta.xml
<CustomField>
    <fullName>ActivityDescription__c</fullName>
    <description>Descripción de la actividad del tomador/cliente en Canal único (ZDA)</description>
    <label>Activity description</label>
    <type>TextArea</type>
</CustomField>