force-app/zurich-base/main/default/objects/Case/fields/AdditionalBusinessExpectation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBusinessExpectation__c</fullName>
    <description>Expectativa de negocio adicional para casos de tipo N2 Gestión de negocio</description>
    <label>Additional business expectation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>