force-app/zurich-base/main/default/objects/Case/fields/AgentOnVacation__c.field-meta.xml
<CustomField>
    <fullName>AgentOnVacation__c</fullName>
    <formula>IF(Owner:User.OnVacation__c,&apos;🔴No Disponible&apos;,&apos;Horario Habitual&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent On Vacation</label>
    <type>Text</type>
</CustomField>