force-app/zurich-base/main/default/objects/Case/fields/AreaOwner__c.field-meta.xml
<CustomField>
    <fullName>AreaOwner__c</fullName>
    <formula>TEXT(Owner:User.Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AreaOwner</label>
    <type>Text</type>
</CustomField>