force-app/zurich-base/main/default/objects/Case/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <description>Email de la persona a la que se asigna el caso</description>
    <label>Assigned to</label>
    <type>Email</type>
</CustomField>