force-app/zurich-base/main/default/objects/Case/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <formula>Account.Association__c</formula>
    <label>Association Formula</label>
    <type>Text</type>
</CustomField>