force-app/zurich-base/main/default/objects/Case/fields/AutomaticClosing__c.field-meta.xml
<CustomField>
    <fullName>AutomaticClosing__c</fullName>
    <formula>OR(CloseInteraction__c=true, CloseInteractionBatch__c=true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Closing</label>
    <type>Checkbox</type>
</CustomField>