force-app/zurich-base/main/default/objects/Case/fields/AutomaticNotifications__c.field-meta.xml
<CustomField>
    <fullName>AutomaticNotifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>OCS. Si está activa y se cumplen las demás condiciones de envío, se notificará al cliente o mediador cuando su caso esté pendiente por su parte.</description>
    <inlineHelpText>Si está activa y se cumplen las demás condiciones de envío, se notificará al cliente o mediador cuando su caso esté pendiente por su parte.</inlineHelpText>
    <label>Automatic notifications</label>
    <type>Checkbox</type>
</CustomField>