force-app/zurich-base/main/default/objects/Case/fields/AutomaticTaskCreated__c.field-meta.xml
<CustomField>
    <fullName>AutomaticTaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Task Created</label>
    <type>Checkbox</type>
</CustomField>