force-app/zurich-base/main/default/objects/Case/fields/BestAgent__c.field-meta.xml
<CustomField>
    <fullName>BestAgent__c</fullName>
    <description>Agente preferente. Campo necesario para la integracion de los casos de ZDA con genesys</description>
    <label>Best agent</label>
    <type>Email</type>
</CustomField>