force-app/zurich-base/main/default/objects/Case/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <description>Nombre de la oficina/director de seguros único que ha creado la petición (ZDA)</description>
    <label>Branch name</label>
    <type>TextArea</type>
</CustomField>