force-app/zurich-base/main/default/objects/Case/fields/BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>BranchNumber__c</fullName>
    <description>Código de la oficina/director de seguros único que ha creado la petición (ZDA)</description>
    <label>Branch number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>