force-app/zurich-base/main/default/objects/Case/fields/BusinessManagerName__c.field-meta.xml
<CustomField>
    <fullName>BusinessManagerName__c</fullName>
    <formula>Account.BusinessManagerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Manager Name</label>
    <type>Text</type>
</CustomField>