force-app/zurich-base/main/default/objects/Case/fields/BusinessVolume__c.field-meta.xml
<CustomField>
    <fullName>BusinessVolume__c</fullName>
    <label>Business volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>