force-app/zurich-base/main/default/objects/Case/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <description>Razón por la cual el cliente cancela o no renueva el servicio.</description>
    <label>Cancellation reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>