force-app/zurich-base/main/default/objects/Case/fields/CaseOwnerRoutingTeam__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerRoutingTeam__c</fullName>
    <formula>TEXT(Owner:User.RoutingTeam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Routing Team</label>
    <type>Text</type>
</CustomField>