force-app/zurich-base/main/default/objects/Case/fields/CauseOfLoss__c.field-meta.xml
<CustomField>
    <fullName>CauseOfLoss__c</fullName>
    <label>Motivo pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Robbery</fullName>
            </value>
            <value>
                <fullName>Theft Cover Do Not Use</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Absolute and permanent disability</fullName>
            </value>
            <value>
                <fullName>Screen Damage</fullName>
            </value>
            <value>
                <fullName>Water Damage</fullName>
            </value>
            <value>
                <fullName>Terminal Illness</fullName>
            </value>
            <value>
                <fullName>Accidental Damage</fullName>
            </value>
            <value>
                <fullName>Desaparición del riesgo</fullName>
            </value>
            <value>
                <fullName>Prima elevada</fullName>
            </value>
            <value>
                <fullName>Reemplazo póliza</fullName>
            </value>
            <value>
                <fullName>Anulación por fallecimiento</fullName>
            </value>
            <value>
                <fullName>Mejor oferta competencia</fullName>
            </value>
            <value>
                <fullName>Faltan coberturas/producto</fullName>
            </value>
            <value>
                <fullName>Indemnización siniestro</fullName>
            </value>
            <value>
                <fullName>Insatisfacción gestión siniestros</fullName>
            </value>
            <value>
                <fullName>Insatisfacción atención cliente</fullName>
            </value>
            <value>
                <fullName>Cambio de vehículo</fullName>
            </value>
            <value>
                <fullName>Cambio de domicilio</fullName>
            </value>
            <value>
                <fullName>Periodo Finalizado</fullName>
            </value>
            <value>
                <fullName>Agente mediador elimina cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>