force-app/zurich-base/main/default/objects/Case/fields/CentroTramitador__c.field-meta.xml
<CustomField>
    <fullName>CentroTramitador__c</fullName>
    <label>Centro tramitador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Center Service</fullName>
            </value>
            <value>
                <fullName>CC Retención</fullName>
            </value>
            <value>
                <fullName>CC Comercialización</fullName>
            </value>
            <value>
                <fullName>CSM Particulares</fullName>
            </value>
            <value>
                <fullName>CSM Administración</fullName>
            </value>
            <value>
                <fullName>BASICOS DAÑOS EXPRESS 1</fullName>
            </value>
            <value>
                <fullName>BASICOS LC &amp; CORP. BARCELONA</fullName>
            </value>
            <value>
                <fullName>BASICOS LC &amp; CORP. MADRID</fullName>
            </value>
            <value>
                <fullName>BASICOS RC MATERIALES 1</fullName>
            </value>
            <value>
                <fullName>BASICOS RC MATERIALES 2</fullName>
            </value>
            <value>
                <fullName>BASICOS RC MATERIALES 3</fullName>
            </value>
            <value>
                <fullName>BASICOS RECLAMACIÓN DAÑOS</fullName>
            </value>
            <value>
                <fullName>CS TECNICO DAÑOS</fullName>
            </value>
            <value>
                <fullName>CT RECOBRO INDEMNIZABLES</fullName>
            </value>
            <value>
                <fullName>CTA MOTOR EXPRESS</fullName>
            </value>
            <value>
                <fullName>CTA AUTO CONVENIOS</fullName>
            </value>
            <value>
                <fullName>CTA DAÑOS PROPIOS</fullName>
            </value>
            <value>
                <fullName>CTA INTERNACIONAL</fullName>
            </value>
            <value>
                <fullName>CTA LESIONES RECLAMACION</fullName>
            </value>
            <value>
                <fullName>CTA RECLAMACION LESIONES</fullName>
            </value>
            <value>
                <fullName>CTA. CONVENCIONAL AUTO</fullName>
            </value>
            <value>
                <fullName>CTD BCN 1</fullName>
            </value>
            <value>
                <fullName>CTD BCN 2</fullName>
            </value>
            <value>
                <fullName>CTD BCN 3</fullName>
            </value>
            <value>
                <fullName>CTD BCN 4</fullName>
            </value>
            <value>
                <fullName>CTD LC &amp; CORP.</fullName>
            </value>
            <value>
                <fullName>CTD LINEAS PERSONALES</fullName>
            </value>
            <value>
                <fullName>CTD PYMES 1</fullName>
            </value>
            <value>
                <fullName>CTD PYMES 2</fullName>
            </value>
            <value>
                <fullName>Zurich Asistencia Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>