force-app/zurich-base/main/default/objects/Case/fields/CIFNIF__c.field-meta.xml
<CustomField>
    <fullName>CIFNIF__c</fullName>
    <label>CIF/NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>