force-app/zurich-base/main/default/objects/Case/fields/CifNifFormula__c.field-meta.xml
<CustomField>
    <fullName>CifNifFormula__c</fullName>
    <formula>IF(NOT(ISBLANK(CIFNIF__c)), &quot;CIF/NIF: &quot; + CIFNIF__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CifNifFormula</label>
    <type>Text</type>
</CustomField>