force-app/zurich-base/main/default/objects/Case/fields/CIFNIFManual__c.field-meta.xml
<CustomField>
    <fullName>CIFNIFManual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIFNIFManual</label>
    <type>Checkbox</type>
</CustomField>