force-app/zurich-base/main/default/objects/Case/fields/ClaimCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ClaimCreatedDate__c</fullName>
    <description>CDEX. Campo que muestra la fecha de creación del siniestro asociado.</description>
    <formula>ClaimId__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Created Date</label>
    <type>DateTime</type>
</CustomField>