force-app/zurich-base/main/default/objects/Case/fields/ClaimDetail__c.field-meta.xml
<CustomField>
    <fullName>ClaimDetail__c</fullName>
    <description>KLINC: Indica el detalle del siniestro</description>
    <label>Claim Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>