force-app/zurich-base/main/default/objects/Case/fields/ClaimHandlingType__c.field-meta.xml
<CustomField>
    <fullName>ClaimHandlingType__c</fullName>
    <description>KLINC: Indica el tipo de gestión de Siniestro</description>
    <label>Claim Handling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>