force-app/zurich-base/main/default/objects/Case/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OCS</description>
    <label>Claim Name</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>