force-app/zurich-base/main/default/objects/Case/fields/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <externalId>true</externalId>
    <label>Número de siniestro</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>