force-app/zurich-base/main/default/objects/Case/fields/ClaimPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimPhoneNumber__c</fullName>
    <description>KLINC: Indica el teléfono del siniestro</description>
    <label>Claim Phone Number</label>
    <type>Phone</type>
</CustomField>