force-app/zurich-base/main/default/objects/Case/fields/ClaimRate__c.field-meta.xml
<CustomField>
    <fullName>ClaimRate__c</fullName>
    <description>Tasa de siniestralidad en porcentaje</description>
    <label>Claim rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>