force-app/zurich-base/main/default/objects/Case/fields/ClaimScore__c.field-meta.xml
<CustomField>
    <fullName>ClaimScore__c</fullName>
    <description>KLINC: Indica la puntuación del siniestro</description>
    <label>Claim Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>