force-app/zurich-base/main/default/objects/Case/fields/ClaimStatusTPA__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatusTPA__c</fullName>
    <label>TPA estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2.5 Fraud</fullName>
            </value>
            <value>
                <fullName>1.1 Pending excess payment</fullName>
            </value>
            <value>
                <fullName>3.1 Rejected</fullName>
            </value>
            <value>
                <fullName>1.3 Pending to pick up device</fullName>
            </value>
            <value>
                <fullName>1.10 Delivered</fullName>
            </value>
            <value>
                <fullName>2.1 Closed covered</fullName>
            </value>
            <value>
                <fullName>4.4 Repair/Replace in progress</fullName>
            </value>
            <value>
                <fullName>4.29 No coverage</fullName>
            </value>
            <value>
                <fullName>4.5 Find my mobile active</fullName>
            </value>
            <value>
                <fullName>1.7 Replaced</fullName>
            </value>
            <value>
                <fullName>1.30 Reminder to make an appointment</fullName>
            </value>
            <value>
                <fullName>4.13 Delivered new device</fullName>
            </value>
            <value>
                <fullName>4.3 Pending to pick up device</fullName>
            </value>
            <value>
                <fullName>Successfully sent to ICP</fullName>
            </value>
            <value>
                <fullName>1.2 Documentation pending</fullName>
            </value>
            <value>
                <fullName>1.21 Rejected offer best object</fullName>
            </value>
            <value>
                <fullName>4.31 Potencial bounce received</fullName>
            </value>
            <value>
                <fullName>1.8 Can not be repaired</fullName>
            </value>
            <value>
                <fullName>1.27 Pending to make an appointment</fullName>
            </value>
            <value>
                <fullName>1.4 Repair/Replace in progress</fullName>
            </value>
            <value>
                <fullName>1.6 Repaired</fullName>
            </value>
            <value>
                <fullName>2.2 Claim expired</fullName>
            </value>
            <value>
                <fullName>2.7 Closed. Device still on warranty period</fullName>
            </value>
            <value>
                <fullName>1.14 Claim expired for the client</fullName>
            </value>
            <value>
                <fullName>2.3 Reopen claim accepted</fullName>
            </value>
            <value>
                <fullName>0.1 Under Analysis</fullName>
            </value>
            <value>
                <fullName>1.0 Submitted to ICP</fullName>
            </value>
            <value>
                <fullName>1.29 No coverage</fullName>
            </value>
            <value>
                <fullName>1.5 Find my mobile active</fullName>
            </value>
            <value>
                <fullName>1.9 Pending to be delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>