force-app/zurich-base/main/default/objects/Case/fields/ClientDiscount__c.field-meta.xml
<CustomField>
    <fullName>ClientDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se marca a true en caso de que se aplique un descuento al cliente</description>
    <label>Client Discount</label>
    <type>Checkbox</type>
</CustomField>