force-app/zurich-base/main/default/objects/Case/fields/ClientGiftCard__c.field-meta.xml
<CustomField>
    <fullName>ClientGiftCard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para que los agentes marquen en caso de que hayan enviado una tarjeta de descuento a cliente</description>
    <label>Client Gift Card</label>
    <type>Checkbox</type>
</CustomField>