force-app/zurich-base/main/default/objects/Case/fields/ClientHasContacted__c.field-meta.xml
<CustomField>
    <fullName>ClientHasContacted__c</fullName>
    <description>Campo para indicar si el cliente ha contactado de forma reactiva</description>
    <label>Client has contacted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>