force-app/zurich-base/main/default/objects/Case/fields/CloseByBatch__c.field-meta.xml
<CustomField>
    <fullName>CloseByBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CloseByBatch</label>
    <type>Checkbox</type>
</CustomField>