force-app/zurich-base/main/default/objects/Case/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <defaultValue>TODAY() + 28</defaultValue>
    <description>EON. Fecha estimada de cierre. Por defecto se ha de cargar 4 semanas desde la creación</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>