force-app/zurich-base/main/default/objects/Case/fields/ClosedBy__c.field-meta.xml
<CustomField>
    <fullName>ClosedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo relleno por un flow, para indicar quién cerró el caso</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>