force-app/zurich-base/main/default/objects/Case/fields/ClosedByMediator__c.field-meta.xml
<CustomField>
    <fullName>ClosedByMediator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed By Mediator</label>
    <type>Checkbox</type>
</CustomField>