force-app/zurich-base/main/default/objects/Case/fields/CloseDetail__c.field-meta.xml
<CustomField>
    <fullName>CloseDetail__c</fullName>
    <description>Dependiente de Type N3</description>
    <label>Close detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeN3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No autoservicio</fullName>
            </value>
            <value>
                <fullName>Caída sistema</fullName>
            </value>
            <value>
                <fullName>Descuentos</fullName>
            </value>
            <value>
                <fullName>Usos / Actividad</fullName>
            </value>
            <value>
                <fullName>Oferta no accesible</fullName>
            </value>
            <value>
                <fullName>Falta de datos</fullName>
            </value>
            <value>
                <fullName>Desaparición riesgo</fullName>
            </value>
            <value>
                <fullName>Reemplazo</fullName>
            </value>
            <value>
                <fullName>Saneamiento</fullName>
            </value>
            <value>
                <fullName>Insatisfacción siniestros</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
            <value>
                <fullName>Insatisfacción mediador</fullName>
            </value>
            <value>
                <fullName>Error FIVA</fullName>
            </value>
            <value>
                <fullName>Mail activación</fullName>
            </value>
            <value>
                <fullName>Estado firma digital</fullName>
            </value>
            <value>
                <fullName>Datos erróneos</fullName>
            </value>
            <value>
                <fullName>Aplicativo web</fullName>
            </value>
            <value>
                <fullName>NIF bloqueado</fullName>
            </value>
            <value>
                <fullName>Información</fullName>
            </value>
            <value>
                <fullName>Documentación</fullName>
            </value>
            <value>
                <fullName>Desbloqueo registro</fullName>
            </value>
            <value>
                <fullName>Corregida</fullName>
            </value>
            <value>
                <fullName>Recepción datos</fullName>
            </value>
            <value>
                <fullName>Envío mail</fullName>
            </value>
            <value>
                <fullName>Gestión incorrecta</fullName>
            </value>
            <value>
                <fullName>Falta aviso</fullName>
            </value>
            <value>
                <fullName>Anulación no tramitada</fullName>
            </value>
            <value>
                <fullName>Solicitud extorno</fullName>
            </value>
            <value>
                <fullName>Promo / Regalo</fullName>
            </value>
            <value>
                <fullName>No procede</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>