force-app/zurich-base/main/default/objects/Case/fields/CloseInteraction__c.field-meta.xml
<CustomField>
    <fullName>CloseInteraction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CloseInteraction</label>
    <type>Checkbox</type>
</CustomField>