force-app/zurich-base/main/default/objects/Case/fields/CloseInteractionBatch__c.field-meta.xml
<CustomField>
    <fullName>CloseInteractionBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CloseInteractionBatch</label>
    <type>Checkbox</type>
</CustomField>