force-app/zurich-base/main/default/objects/Case/fields/CloseResult__c.field-meta.xml
<CustomField>
    <fullName>CloseResult__c</fullName>
    <description>Dependiente de Type N3</description>
    <label>Close result</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subtype__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Realizado</fullName>
            </value>
            <value>
                <fullName>No Realizado</fullName>
            </value>
            <value>
                <fullName>No Realizado -Pol. Seguridad</fullName>
            </value>
            <value>
                <fullName>Realizado - Impacto en prima</fullName>
            </value>
            <value>
                <fullName>Realizado - Sin impacto en prima</fullName>
            </value>
            <value>
                <fullName>No realizado - No procede</fullName>
            </value>
            <value>
                <fullName>No realizado - Rechazo técnico</fullName>
            </value>
            <value>
                <fullName>No realizado - Cliente no interesa</fullName>
            </value>
            <value>
                <fullName>No realizado - Otros</fullName>
            </value>
            <value>
                <fullName>No realizado - Caída Sistema</fullName>
            </value>
            <value>
                <fullName>No realizado - Derivado otras áreas</fullName>
            </value>
            <value>
                <fullName>Retenido</fullName>
            </value>
            <value>
                <fullName>No Retenido</fullName>
            </value>
            <value>
                <fullName>Realizado - Reenvío Recibo</fullName>
            </value>
            <value>
                <fullName>Realizado - Pago Tarjeta</fullName>
            </value>
            <value>
                <fullName>Realizado - Pago Transferencia</fullName>
            </value>
            <value>
                <fullName>Derivado - Norma 57/AJ</fullName>
            </value>
            <value>
                <fullName>Derivado - Otras Áreas</fullName>
            </value>
            <value>
                <fullName>Realizado - Rehabilitación</fullName>
            </value>
            <value>
                <fullName>Realizado - Retroactividad</fullName>
            </value>
            <value>
                <fullName>Realizado - Nueva Póliza</fullName>
            </value>
            <value>
                <fullName>Realizado - Con extorno</fullName>
            </value>
            <value>
                <fullName>Realizado - Sin extorno</fullName>
            </value>
            <value>
                <fullName>Ganada</fullName>
            </value>
            <value>
                <fullName>Perdida - Garantías</fullName>
            </value>
            <value>
                <fullName>Perdida - Tiempo respuesta</fullName>
            </value>
            <value>
                <fullName>Declinada - Actividad</fullName>
            </value>
            <value>
                <fullName>Declinada - Precio</fullName>
            </value>
            <value>
                <fullName>Declinada - Medidas protección</fullName>
            </value>
            <value>
                <fullName>Caducada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>