force-app/zurich-base/main/default/objects/Case/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <description>Breve comentario sobre el caso</description>
    <inlineHelpText>Breve comentario para ampliar la información del caso</inlineHelpText>
    <label>Comentario</label>
    <type>TextArea</type>
</CustomField>