force-app/zurich-base/main/default/objects/Case/fields/Commercial_Code__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Code__c</fullName>
    <description>Extrae el código comercial del producto relacionado a la póliza del caso. Si el caso no tiene póliza, lo buscara en la oferta asociada.</description>
    <formula>IF(
    AND(
        NOT(ISBLANK(PolicyId__c)),
								NOT(ISBLANK(PolicyId__r.ProductId__c))
								),
    PolicyId__r.ProductId__r.CommercialCode__c,
    IF(
        AND(
            NOT(ISBLANK(OfferId__c)),
            NOT(ISBLANK(OfferId__r.ProductId__c))
								),
        OfferId__r.ProductId__r.CommercialCode__c,
								&apos;&apos;
    )
)</formula>
    <label>Commercial Code</label>
    <type>Text</type>
</CustomField>