force-app/zurich-base/main/default/objects/Case/fields/CommercialProductCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialProductCode__c</fullName>
    <description>Producto en BS (ZDA)</description>
    <inlineHelpText>Producto en Canal único</inlineHelpText>
    <label>Commercial product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRD0020</fullName>
                <label>Protección Comunidades Zurich (OFERTABLE)</label>
            </value>
            <value>
                <fullName>PRD0027</fullName>
                <label>Protección Comercios y Oficinas Zurich (No Ofertable)</label>
            </value>
            <value>
                <fullName>PRD0028</fullName>
                <label>Protección Empresas  Zurich (OFERTABLE)</label>
            </value>
            <value>
                <fullName>PRD0029</fullName>
                <label>Protección Transportes Zurich (OFERTABLE)</label>
            </value>
            <value>
                <fullName>PRD0032</fullName>
                <label>Protección Camiones Leasing Zurich (OFERTABLE)</label>
            </value>
            <value>
                <fullName>PRD0035</fullName>
                <label>Protección Construcción (OFERTABLE)</label>
            </value>
            <value>
                <fullName>PRD0038</fullName>
                <label>Responsabilidad Civil Zurich (OFERTABLE)</label>
            </value>
            <value>
                <fullName>PRD0901</fullName>
                <label>Responsabilidad Civil D&amp;O Zurich (OFERTABLE)</label>
            </value>
            <value>
                <fullName>Protección Comercios y Oficinas BSSG (OFERTABLE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>