force-app/zurich-base/main/default/objects/Case/fields/CompanyBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>CompanyBillingAddress__c</fullName>
    <formula>RobotCompanyRoadType__c &amp; &quot; &quot; &amp;
RobotCompanyRoadName__c &amp; &quot; &quot; &amp;   
RobotCompanyRoadNumber__c &amp; &quot;, &quot; &amp; 
RobotCompanyAdditionalInformation__c &amp; &quot;, &quot; &amp; 
RobotCompanyZipCode__c &amp; &quot; &quot; &amp; 
RobotCompanyLocality__c &amp; &quot;, &quot; &amp;
RobotCompanyProvince__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Billing Address</label>
    <type>Text</type>
</CustomField>