force-app/zurich-base/main/default/objects/Case/fields/ControlEmailCC__c.field-meta.xml
<CustomField>
    <fullName>ControlEmailCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ControlEmailCC</label>
    <type>Checkbox</type>
</CustomField>